syntax = "proto3";

package types;

message User {
  string id = 1; // id
  string first_name = 2; // firstName
  string last_name = 3; // lastName
  string email = 4;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  int32 id = 1;
  bool success = 2;
}
